Making the page responsive

--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -16,16 +16,18 @@
     </div>
   </div>
 
-  <p-carousel [value]="images" styleClass="custom-carousel">
-    <ng-template let-image pTemplate="item">
-      <div class="carousel-item">
-        <img [src]="image.source" [alt]="image.alt" class="carousel-image" />
-        <div class="overlay-text">
-          {{ image.overlayText }}
+  <div class="carousel-container">
+    <p-carousel [value]="images" styleClass="custom-carousel">
+      <ng-template let-image pTemplate="item">
+        <div class="carousel-item">
+          <img [src]="image.source" [alt]="image.alt" class="carousel-image" />
+          <div class="overlay-text">
+            {{ image.overlayText }}
+          </div>
         </div>
-      </div>
-    </ng-template>
-  </p-carousel>
+      </ng-template>
+    </p-carousel>
+  </div>
 
 
   <div class="content">
