--- a/src/app/contact-us/contact-us.component.scss
+++ b/src/app/contact-us/contact-us.component.scss
@@ -64,6 +64,6 @@ iframe {
 /* Adjust the responsive styles for different screen sizes if needed */
 @media screen and (max-width: 768px) {
   .contact-us {
-    padding: 30px;
+    padding-top: 150px;
   }
 }
