--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -4,10 +4,13 @@
   width: 100%;
   height: 100vh;
 
-  /* Adjustments for mobile devices */
-  @media screen and (max-width: 768px) {
-    height: 60vh;
+  
+@media screen and (max-width: 768px) {
+  body {
+    background-size: auto; /* Adjust background size for smaller screens */
+    background-attachment: scroll; /* Allow the background image to scroll on smaller screens */
   }
+}
 }
 
 .content {
