--- a/src/app/contact-us/contact-us.component.html
+++ b/src/app/contact-us/contact-us.component.html
@@ -22,8 +22,8 @@
                     Pin code- 560037
                 </address>
                 <h5>Email</h5>
-                <p><strong>Office:</strong> acmecorporation.office@gmail.com</p>
-                <p><strong>Personal:</strong> janedoe.personal@gmail.com</p>
+                <p><strong>Office:</strong> office@gmail.com</p>
+                <p><strong>Personal:</strong> personal@gmail.com</p>
                 <h5>Phone</h5>
                 <p><strong>Office:</strong> +91-1234567890</p>
                 <p><strong>Work:</strong> +91-1234567891</p>
