Update some style

--- a/src/app/component/header/header.component.scss
+++ b/src/app/component/header/header.component.scss
@@ -160,6 +160,10 @@ button.nofocus {
     padding-right: 0;
   }
 
+  .header {
+    padding: 10px;
+  }
+
   .title-wrapper {
     font-size: 20px;
     margin-right: 0;
