--- a/src/app/component/cart/cart.component.scss
+++ b/src/app/component/cart/cart.component.scss
@@ -2,9 +2,10 @@
   background-image: url("https://cdn.maqe.com/content/uploads/2021/07/22072853/Optimized-Shopping_cart_abandonment_rate-1024x683.jpg");
   background-size: cover; /* Ensure the background image covers the entire card */
   background-position: center;
-  height: 60vh;
+  height: 65vh;
   padding: 25px;
   margin-top: 150px;
+  margin-bottom: 60px;
   border: 1px solid rgb(230, 235, 203);
 }
 
@@ -69,7 +70,8 @@ h6 {
 }
 
 .cart-product {
-  background-color: #04020d;
+  background-color: rgb(229, 229, 231);
+  min-height: 70vh;
 }
 
 .table td,
@@ -77,7 +79,7 @@ h6 {
   padding: 0.75rem;
   vertical-align: top;
   border-top: 1px solid #dee2e6;
-  color: white;
+  color: #04020d;
 }
 
 .cart-button {
