Update some style

--- a/src/app/about-us/about-us.component.scss
+++ b/src/app/about-us/about-us.component.scss
@@ -40,7 +40,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  color: #04020d;
+  color: white;
   padding: 10px;
   max-width: 500px;
   font-style: italic;
@@ -80,14 +80,14 @@
 }
 
 .box {
-  background-image: url("https://i.pinimg.com/564x/8f/62/93/8f62935450fbbf4075fbde8df9a04c97.jpg");
+  background-image: url("https://t4.ftcdn.net/jpg/02/52/19/57/360_F_252195727_B4KoBbO3bNkU6JO3mmTyF57sAUilqgRs.jpg");
   background-size: cover;
   display: flex;
   align-items: center;
   padding: 30px;
   border-radius: 8px;
   margin: 10px;
-  color: #04020d;
+  color: white;
   flex: 1 1 300px;
   max-width: 400px;
   height: 140px;
@@ -96,7 +96,7 @@
 .box p {
   font-size: 1em;
   line-height: 1.6em;
-  color: #04020d;
+  color: white;
   font-style: italic;
   font-weight: bold;
   text-align: center;
