--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,7 +1,3 @@
-
-  
-
-
 footer {
   background-color: #04020d;
   color: #fff;
@@ -55,4 +51,11 @@ a {
 
 a:hover {
   color: rgb(212, 212, 212);
+}
+
+
+@media screen and (width: 1024px) and (height: 600px) {
+  footer {
+    margin-top: 100px;
+  }
 }
