--- a/src/app/user-auth/user-auth.component.css
+++ b/src/app/user-auth/user-auth.component.css
@@ -4,10 +4,9 @@
   justify-content: center;
   padding-top: 200px;
   /* background-color: #04020d; */
-  height: 80vh;
+  height: 85vh;
   background-size: cover;
   width: 100%;
-  height: 85vh;
 }
 
 .common-form {
@@ -90,5 +89,14 @@ p {
 
   .form-button {
     width: 100%;
+  }
+}
+
+@media screen and (width: 280px) and (height: 653px) {
+  h3 {
+    padding-bottom: 5px;
+  }
+  .user-auth {
+    padding-top: 160px;
   }
 }
