--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,8 +1,9 @@
 footer {
   background-color: #04020d;
   color: #fff;
-  padding: 20px 0;
+  /* padding: 20px 0; */
   text-align: center;
+  margin: 0;
 }
 
 .footer-container {
@@ -11,7 +12,7 @@ footer {
   flex-wrap: wrap;
   max-width: 1200px;
   margin: 0 auto;
-  padding-top: 20px;
+  padding-top: 32px;
 }
 
 .footer-section h5 {
