--- a/src/styles.css
+++ b/src/styles.css
@@ -11,6 +11,7 @@ body {
   padding: 0;
   background-color: rgb(229, 229, 231); /* Set the entire background color */
   color: #fff; /* Text color */
+  overflow-x: hidden;
 }
 
 /* Other global styles as needed */
