Update some style

--- a/src/app/component/products/products.component.scss
+++ b/src/app/component/products/products.component.scss
@@ -179,6 +179,7 @@ p {
     text-align: left;
     font-size: 14px;
     margin-left: 10px;
+    height: 70px;
     background-color: rgb(229, 229, 231);
   }
 
