--- a/src/app/component/cart/cart.component.html
+++ b/src/app/component/cart/cart.component.html
@@ -45,7 +45,7 @@
                         <tr>
                             <td colspan="4"></td>
                             <td><button (click)="emptycart()" class="btn btn-danger">Empty Cart</button></td>
-                            <td><button routerLink="/products" class="btn btn-primary">Shop More</button></td>
+                            <td><button routerLink="/products" class="btn btn-dark">Shop More</button></td>
                             <td><button class="btn btn-success">Checkout</button></td>
                             <td><strong>Total : ${{grandTotal | number : '1.2-2'}}</strong></td>
                         </tr>
