--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -12,7 +12,7 @@
 
         <div class="footer-section">
             <h5>Contact Us</h5>
-            <p>Email: office&#64;example.com</p>
+            <p>Email: office&#64;gmail.com</p>
             <p>Phone: +1 (123) 456-7890</p>
         </div>
 
