--- a/src/app/orders/orders.component.scss
+++ b/src/app/orders/orders.component.scss
@@ -1,8 +1,13 @@
+.container {
+  margin-bottom: 20px;
+  max-width: 1140px;
+}
+
 .card {
   background-image: url("https://www.ssi-schaefer.com/resource/blob/1076888/b5bdadcababc0904a574ea9d675870c3/e-commerce-hero-dam-image-en-31561--data.jpg");
   background-size: cover; /* Ensure the background image covers the entire card */
   background-position: center;
-  height: 61vh;
+  height: 100vh;
   padding: 25px;
   margin-top: 160px;
   margin-bottom: 53px;
@@ -24,7 +29,7 @@ h6 {
 .left {
   position: absolute;
   top: 45%;
-  left: 32%;
+  left: 35%;
   transform: translate(-50%, -50%);
   text-align: center;
 }
@@ -44,7 +49,7 @@ h6 {
 
 .cart-product {
   background-color: rgb(229, 229, 231);
-  min-height: 70vh;
+  min-height: 90vh;
 }
 
 .table td,
