Add some style in product details

--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -3,7 +3,7 @@
 
         <div class="my-navbar">
             <div class="left-side-nav">
-                <i class="pi pi-amazon">&nbsp;</i>
+                <a routerLink="products"> <i class="pi pi-amazon">&nbsp;</i></a>
                 <div class="title-wrapper">
                     <a routerLink="products">AMAZON</a>
                 </div>
