--- a/src/app/component/products/products.component.html
+++ b/src/app/component/products/products.component.html
@@ -67,8 +67,8 @@
                   {{item.description}}
                 </p>
                 <p><strong>Price:</strong> ${{item.price}}</p>
-                <button class="btn btn-primary" (click)=addtocart(item)>Add to cart</button>
-                <button class="btn btn-primary" (click)=addtocart(item)><a routerLink="/details/{{item.id}}">View Details</a></button>
+                <button class="btn btn-primary" (click)=addtocart(item)>Add To Cart</button>
+                <button class="btn btn-primary" [routerLink]="'/details/' + item.id">View Details</button>
               </div>
 
             </ng-container>
