--- a/src/app/component/products/products.component.html
+++ b/src/app/component/products/products.component.html
@@ -35,8 +35,7 @@
 
 
   <div class="container" *ngIf="filteredProducts$ | async as products">
-    <p-dataView #dv [value]="products" [paginator]="true" [rows]="1" [sortField]="sortField" [sortOrder]="sortOrder"
-      layout="grid">
+    <p-dataView #dv [value]="products" [rows]="6" [paginator]="true" [sortField]="sortField" [sortOrder]="sortOrder">
       <ng-template pTemplate="header">
         <div class="flex flex-column md:flex-row md:justify-content-between">
           <!-- <span class="instruction">* Sort by price first, then select category!</span> -->
@@ -46,8 +45,7 @@
         <p-dropdown [options]="categorysortOptions" [(ngModel)]="sortKey" placeholder="sort by category..."
           (onChange)="onSortChange($event)" styleClass="mb-5 md:mb-0"></p-dropdown>
       </ng-template>
-
-      <ng-template let-product pTemplate="gridItem">
+      <ng-template let-products pTemplate="list">
         <div class="container">
 
           <div class="row">
@@ -77,4 +75,3 @@
       </ng-template>
     </p-dataView>
   </div>
-</div>
