--- a/src/app/component/products/products.component.html
+++ b/src/app/component/products/products.component.html
@@ -7,52 +7,30 @@
           <option value="">All</option>
           <option value="{{option}}" *ngFor="let option of categories">{{option}}</option>
         </select>
-
       </div>
 
-      <!-- <div class="item">
-      <a (click)="filterrCategory($event)">
-        <h5> All items &nbsp;<i class="pi pi-chevron-down"></i></h5>
-      </a>
-    </div>
-    <div class="item">
-      <a (click)="filterrCategory($event)">
-        <h5> Clothes &nbsp;<i class="pi pi-chevron-down"></i></h5>
-      </a>
-    </div>
-    <div class="item">
-      <a (click)="filterrCategory($event)">
-        <h5> Jewelery &nbsp;<i class="pi pi-chevron-down"></i></h5>
-      </a>
-    </div>
-    <div class="item">
-      <a (click)="filterrCategory($event)">
-        <h5> Electronics &nbsp;<i class="pi pi-chevron-down"></i></h5>
-      </a>
-    </div> -->
+      <div class="price">
+        <h6>SORT BY PRICE:</h6>
+        <p-dropdown [options]="sortOptions" [(ngModel)]="sortKey" placeholder="Sort by price..."
+          (onChange)="onSortChange($event)" styleClass="mb-5"></p-dropdown>
+      </div>
+      <div class="category">
+        <h6>SORT BY CATEGORY:</h6>
+        <p-dropdown [options]="categorysortOptions" [(ngModel)]="sortKey" placeholder="Sort by category..."
+          (onChange)="onSortChange($event)" styleClass="mb-5 md:mb-0"></p-dropdown>
+      </div>
     </div>
   </div>
-
-
   <div class="container" *ngIf="filteredProducts$ | async as products">
     <p-dataView #dv [value]="products" [rows]="6" [paginator]="true" [sortField]="sortField" [sortOrder]="sortOrder">
       <ng-template pTemplate="header">
-        <div class="flex flex-column md:flex-row md:justify-content-between">
-          <!-- <span class="instruction">* Sort by price first, then select category!</span> -->
-          <p-dropdown [options]="sortOptions" [(ngModel)]="sortKey" placeholder="sort by price..."
-            (onChange)="onSortChange($event)" styleClass="mb-5 md:mb-0"></p-dropdown>
-        </div>
-        <p-dropdown [options]="categorysortOptions" [(ngModel)]="sortKey" placeholder="sort by category..."
-          (onChange)="onSortChange($event)" styleClass="mb-5 md:mb-0"></p-dropdown>
+        <!-- Remove the second dropdown here -->
       </ng-template>
       <ng-template let-products pTemplate="list">
         <div class="container">
-
           <div class="row">
-
             <ng-container *ngFor="let item of products | filter:searchKey:'title'">
               <div class="card col-md-3">
-
                 <div class="product-grid-item-content">
                   <div>
                     <i class="pi pi-tag product-category-icon"></i>
@@ -61,17 +39,15 @@
                   <img src="{{item.image}}" alt="">
                 </div>
                 <h6> <strong> {{item.title}} </strong> </h6>
-                <p>
-                  {{item.description}}
-                </p>
+                <p>{{item.description}}</p>
                 <p><strong>Price:</strong> ${{item.price}}</p>
                 <button class="btn btn-primary" (click)=addtocart(item)>Add To Cart</button>
                 <button class="btn btn-primary" [routerLink]="'/details/' + item.id">View Details</button>
               </div>
-
             </ng-container>
           </div>
         </div>
       </ng-template>
     </p-dataView>
   </div>
+</div>
